Fixed page length, improved contrast, fixed spacing between features

--- a/src/styles/feature_element.scss
+++ b/src/styles/feature_element.scss
@@ -1,5 +1,5 @@
 .panel {
-    --base-color: rgba(0, 0, 0, 0.4);
+    --base-color: rgba(0, 0, 0, 0.55);
     --hl-color: #ffffff71;
     --border-radius: 0.25rem;
 
