--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,7 +22,7 @@
 body {
     color: white;
     background-color: black;
-    height: 1100vh;
+    height: 480rem;
 }
 
 h1 .hl,
